Fix meta section spacing

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -9079,7 +9079,7 @@ noscript {
     background: lighten($ui-base-color, 4%);
     border-radius: 16px;
     display: flex;
-    margin-bottom: 30px;
+    margin-top: 30px;
     font-size: 15px;
 
     &__column {
